Next Release
------------

- Removed ``setuptools`` from the ``install_requires`` list in ``setup.py``
  because it caused installation issues on some systems.

0.9 (2013-09-18)
----------------

- Added license.

- Fixed bug in cmd line option validator for ProcessStateEmailMonitor
  Bug report by Val Jordan

0.8 (2013-05-26)
----------------

- Superlance will now refuse to install on an unsupported version of Python.

- Allow SMTP credentials to be supplied to ProcessStateEmailMonitor
  Patch by Steven Davidson.

- Added ``-n`` option to memmon that adds this name to the email
  subject to identify which memmon process restarted a process.
  Useful in case you run multiple supervisors that control
  different processes with the same name.
  Patch by Harald Friessnegger.

- ProcessStateEmailMonitor now adds Date and Message-ID headers to emails.
  Patch by Andrei Vereha.

0.7 (2012-08-22)
----------------

- The ``crashmailbatch --toEmail`` option now accepts a comma-separated
  list of email addresses.

0.6 (2011-08-27)
----------------

- Separated unit tests into their own files

- Created ``fatalmailbatch`` plugin

- Created ``crashmailbatch`` plugin

- Sphinxified documentation.

- Fixed ``test_suite`` to use the correct module name in setup.py.

- Fixed the tests for ``memmon`` to import the correct module.

- Applied patch from Sam Bartlett: processes which are not autostarted
  have pid "0".  This was crashing ``memmon``.

- Add ``smtpHost`` command line flag to ``mailbatch`` processors.

- Added ``crashsms`` from Juan Batiz-Benet

- Converted ``crashmailbatch`` and friends from camel case to pythonic style

- Fixed a bug where ``httpok`` would crash with the ``-b`` (in-body)
  option.  Patch by Joaquin Cuenca Abela.

- Fixed a bug where ``httpok`` would not handle a URL with a query string
  correctly.  Patch by Joaquin Cuenca Abela.

- Fixed a bug where ``httpok`` would not handle process names with a