@@ -4,6 +4,10 @@ Next Release
 - Removed ``setuptools`` from the ``install_requires`` list in ``setup.py``
   because it caused installation issues on some systems.
 
+- Honor timeout in httok checks even on trying the connection.
+  Without it, processes that take make than 60 seconds to accept connections
+  and http_ok with TICK_60 events cause a permanent restart of the process.
+
 0.9 (2013-09-18)
 ----------------
 
